# Brigada

./: db.sqlite3  pyproject.toml
actividad/: admin.py  forms.py  models.py  urls.py  views.py
actividad/migrations/: 0001_initial.py
actividad/templates/: form_brig.html
agenda/: settings.py  urls.py
