[tool.poetry]
name = "agenda"
version = "0.1.0"
description = "practica con views 'class' CRUD y Formularios"
authors = ["ToerRob99 <robertoparra99@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
